add in map files, remove apm, some profile file restructure

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -14,7 +14,7 @@
 //             else 
 //                 span #{v}
 
-
+template(name='target_info')
 
 // template(name='comments_view_small')            
 //     if doc_comments.count
@@ -70,6 +70,8 @@ template(name='comments')
                     span.actions
 
 
+template(name='voting_small')
+template(name='author_info')
 
 template(name='remove_button')
     .ui.icon.basic.circular.button.remove_doc(title='delete')
