--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -7,15 +7,15 @@ template(name='profile_layout')
                 .ui.stackable.padded.grid
                     .three.wide.column
                         span.mobile.only
-                            a(href="/u/#{username}/")
+                            a(href="/user/#{username}/")
                                 img.ui.centered.tiny.inline.spaced.rounded.image.zoomer.boop(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
                         span.mobile.hidden
-                            a(href="/u/#{username}/")
+                            a(href="/user/#{username}/")
                                 img.ui.centered.fluid.rounded.image.zoomer.boop(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
-                        a.ui.header.refresh_user_stats(href="/u/#{username}") 
+                        a.ui.header.refresh_user_stats(href="/user/#{username}") 
                             |#{name}
                         // div
-                        a.ui.small.header.refresh_user_stats(href="/u/#{username}") 
+                        a.ui.small.header.refresh_user_stats(href="/user/#{username}") 
                             |@#{username}
                         .ui.inline.header() #{points}pts
                         // .ui.label {{to_percent one_ratio}}% ratio
@@ -26,11 +26,11 @@ template(name='profile_layout')
                         // .ui.button.join
                         //     |join
                         if is_admin
-                            a.ui.icon.button(href="/u/#{username}/edit" title='admin edit account')
+                            a.ui.icon.button(href="/user/#{username}/edit" title='admin edit account')
                                 i.shield.large.icon
                                 // |account
                         if is_current_user
-                            a.ui.icon.button(href="/u/#{username}/edit" title='edit your account')
+                            a.ui.icon.button(href="/user/#{username}/edit" title='edit your account')
                                 i.cog.icon
                                 // |account
                             a.ui.icon.button.logout(href="#" title='log out')
@@ -59,47 +59,47 @@ template(name='profile_layout')
                             .item
                                
                     .thirteen.wide.column
-                        a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/" class="{{isActiveRoute 'user_dashboard'}}" title="#{user.username} dashboard")
+                        a.ui.icon.large.button.select_term.no_blink(href="/user/#{username}/" class="{{isActiveRoute 'user_dashboard'}}" title="#{user.username} dashboard")
                             i.large.dashboard.icon
                             // span dashboard
                         if currentUser
-                            a.ui.large.button.select_term.no_blink(href="/u/#{username}/posts" class="{{isActiveRoute 'user_posts'}}" title="#{user.username} posts")
+                            a.ui.large.button.select_term.no_blink(href="/user/#{username}/posts" class="{{isActiveRoute 'user_posts'}}" title="#{user.username} posts")
                                 i.newspaper.large.icon
                                 |#{user_post_count}
                                 // span posts
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/comments" class="{{isActiveRoute 'user_comments'}}" title="#{user.username} comments")
+                            a.ui.icon.large.button.select_term.no_blink(href="/user/#{username}/comments" class="{{isActiveRoute 'user_comments'}}" title="#{user.username} comments")
                                 i.chat.large.icon
                                 |#{user_comment_count}
                                 // span comments
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}" title="#{user.username} credits")
+                            a.ui.icon.large.button.select_term.no_blink(href="/user/#{username}/credits" class="{{isActiveRoute 'user_credits'}}" title="#{user.username} credits")
                                 i.large.chevron.down.icon
                                 // span pts received
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/sent" class="{{isActiveRoute 'user_sent'}}" title="#{user.username} sent")
+                            a.ui.icon.large.button.select_term.no_blink(href="/user/#{username}/sent" class="{{isActiveRoute 'user_sent'}}" title="#{user.username} sent")
                                 i.large.gift.icon
                                 // span pts sent
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/received" class="{{isActiveRoute 'user_received'}}" title="#{user.username} received")
+                            a.ui.icon.large.button.select_term.no_blink(href="/user/#{username}/received" class="{{isActiveRoute 'user_received'}}" title="#{user.username} received")
                                 i.large.dollar.icon
                                 // span credit
-                            a.ui.disabled.icon.large.button.select_term.no_blink(href="/u/#{username}/upvoted" class="{{isActiveRoute 'user_upvoted'}}" title="#{user.username} upvoted")
+                            a.ui.disabled.icon.large.button.select_term.no_blink(href="/user/#{username}/upvoted" class="{{isActiveRoute 'user_upvoted'}}" title="#{user.username} upvoted")
                                 i.large.chevron.up.icon
                                 // span upvoted
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/downvoted" class="{{isActiveRoute 'user_downvoted'}}" title="#{user.username} downvoted")
+                            a.ui.icon.large.button.select_term.no_blink(href="/user/#{username}/downvoted" class="{{isActiveRoute 'user_downvoted'}}" title="#{user.username} downvoted")
                                 i.large.chevron.down.icon
                                 // span downvoted
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/tips" class="{{isActiveRoute 'user_tips'}}" title="#{user.username} tips")
+                            a.ui.icon.large.button.select_term.no_blink(href="/user/#{username}/tips" class="{{isActiveRoute 'user_tips'}}" title="#{user.username} tips")
                                 i.donate.large.icon
                                 // span tips
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/groups" class="{{isActiveRoute 'user_groups'}}" title="#{user.username} groups")
+                            a.ui.icon.large.button.select_term.no_blink(href="/user/#{username}/groups" class="{{isActiveRoute 'user_groups'}}" title="#{user.username} groups")
                                 i.users.large.icon
                                 // span groups
-                            a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/bounties" class="{{isActiveRoute 'user_bounties'}}" title="#{user.username} bounties")
+                            a.ui.icon.large.button.select_term.no_blink(href="/user/#{username}/bounties" class="{{isActiveRoute 'user_bounties'}}" title="#{user.username} bounties")
                                 i.hand.holding.large.icon
                                 // span bounties
                             if is_current_user
-                                a.ui.icon.large.button.select_term.no_blink(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}" title="#{user.username} friends")
+                                a.ui.icon.large.button.select_term.no_blink(href="/user/#{username}/friends" class="{{isActiveRoute 'user_friends'}}" title="#{user.username} friends")
                                     i.users.large.icon
                                     // span friends
-                                a.ui.large.icon.button.select_term.no_blink(href="/u/#{username}/vault" class="{{isActiveRoute 'user_vault'}}" title="#{user.username} friends")
+                                a.ui.large.icon.button.select_term.no_blink(href="/user/#{username}/vault" class="{{isActiveRoute 'user_vault'}}" title="#{user.username} friends")
                                     i.lock.large.icon
                                     // span vault
                         if is_dev
@@ -232,7 +232,7 @@ template(name='user_dashboard')
                 if currentUser
                     .ui.two.column.stackable.grid
                         .column
-                            a.ui.inline.spaced.header(href="/u/#{username}/debits")
+                            a.ui.inline.spaced.header(href="/user/#{username}/debits")
                                 i.chevron.up.icon
                                 |karma sent
                                 |#{total_debit_amount}p
@@ -249,7 +249,7 @@ template(name='user_dashboard')
                                             .ui.small.label #{this}
                                         +target_info
                         .column
-                            a.ui.inline.header(href="/u/#{username}/credits")
+                            a.ui.inline.header(href="/user/#{username}/credits")
                                 i.chevron.down.large.icon
                                 |karma received
                                 |#{total_credit_amount}p
@@ -492,7 +492,7 @@ template(name='user_post_small')
                 +print_this
 
 template(name='user_bookmarks_widget')
-    a.ui.header(href="/u/#{username}/bookmarks")
+    a.ui.header(href="/user/#{username}/bookmarks")
         i.bookmark.icon(title='bookmark tags')
         |bookmarks
     each bookmark_tags
