--- a/client/client.jade
+++ b/client/client.jade
@@ -25,7 +25,7 @@ head
     script(src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js")
     script(async src="https://www.googletagmanager.com/gtag/js?id=G-GLYPPRGJFQ")
     // script(async src="//embed.redditmedia.com/widgets/platform.js" charset="UTF-8")
-    link(href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet")
+    // link(href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet")
 
     script.
         window.dataLayer = window.dataLayer || [];
