--- a/client/nav.jade
+++ b/client/nav.jade
@@ -17,16 +17,18 @@ template(name='nav')
         //         .item 111
         // a.icon.item.blink.clear(href="/love" class="{{isActiveRoute 'love'}}")
         //     i.heart.outline.large.icon
-        // a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
-        //     i.search.large.icon
-        // a.icon.item.blink.clear(href="/subs" class="{{isActiveRoute 'subs'}}")
-        //     i.reddit.large.icon
-        // a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
-        //     i.stack.exchange.large.icon
-        // a.icon.item.blink.clear.go_shop.mobile.hidden(href="/shop" class="{{isActiveRoute 'shop'}}")
-        //     i.line.shop.large.icon
-        // a.icon.item.blink.clear.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
-        //     i.line.hand.holding.heart.large.icon
+        a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
+            i.search.large.icon
+        a.icon.item.blink.clear(href="/subs" class="{{isActiveRoute 'subs'}}")
+            i.reddit.large.icon
+        a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
+            i.stack.exchange.large.icon
+        a.icon.item.blink.clear(href="/map" class="{{isActiveRoute 'map'}}")
+            i.marker.large.icon
+        a.icon.item.blink.clear.go_shop.mobile.hidden(href="/shop" class="{{isActiveRoute 'shop'}}")
+            i.line.shop.large.icon
+        a.icon.item.blink.clear.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
+            i.line.hand.holding.heart.large.icon
         // if currentUser
         a.icon.item.blink.clear(href="/people" class="{{isActiveRoute 'people'}}")
             i.users.large.icon
@@ -61,7 +63,7 @@ template(name='nav')
             // //     i.inbox.icon
             // a.icon.item.mobile.hidden(href="/u/#{currentUser.username}/received" class="{{isActivePath 'user_received'}}" title="#{user.username} received")
             //     strong #{currentUser.points}
-            a.item.mobile.hidden(href="/u/#{currentUser.username}" class="{{isActiveRoute regex='user'}}")
+            a.item.mobile.hidden(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user'}}")
                 if currentUser.profile_image_id
                     if is_admin
                         i.shield.icon(title='admin mode on')
