--- a/client/nav.jade
+++ b/client/nav.jade
@@ -20,15 +20,15 @@ template(name='nav')
         a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
             i.search.large.icon
         a.icon.item.blink.clear(href="/subs" class="{{isActiveRoute 'subs'}}")
-            i.reddit.large.icon
+            i.fire.large.icon
         a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
             i.stack.exchange.large.icon
         a.icon.item.blink.clear(href="/map" class="{{isActiveRoute 'map'}}")
             i.marker.large.icon
-        a.icon.item.blink.clear.go_shop.mobile.hidden(href="/shop" class="{{isActiveRoute 'shop'}}")
-            i.line.shop.large.icon
-        a.icon.item.blink.clear.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
-            i.line.hand.holding.heart.large.icon
+        // a.icon.item.blink.clear.go_shop.mobile.hidden(href="/shop" class="{{isActiveRoute 'shop'}}")
+        //     i.line.shop.large.icon
+        // a.icon.item.blink.clear.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
+        //     i.line.hand.holding.heart.large.icon
         // if currentUser
         a.icon.item.blink.clear(href="/people" class="{{isActiveRoute 'people'}}")
             i.users.large.icon
