--- a/client/style.css
+++ b/client/style.css
@@ -67,12 +67,12 @@
 /*.ui.attached.menu:not(.tabular) {*/
 /*  border:0px !important;*/
 /*}*/
-/*.seg {*/
-/*  background: rgba(250,250,250,.85);*/
+.seg {
+  background: rgba(250,250,250,.85);
   /*opacity: .5;*/
-  /*border-radius: 5px;*/
-/*  padding:3px;*/
-/*}*/
+  border-radius: 5px;
+  padding:3px;
+}
 /*.pulsing {*/
     /*height: 250px; */
     /*width: 250px; */
@@ -799,8 +799,9 @@
 /*}*/
 
 
-/*.inline {*/
-  /*display:inline !important;*/
+.inline {
+  display:inline !important;
+}
   /*padding-right: 5px !important;*/
   /*margin-right: 0px !important;*/
   /*padd: 1em !important; */
