stack split from client to server, remove alpha headers for title, fewer search docs

--- a/client/alpha.jade
+++ b/client/alpha.jade
@@ -47,7 +47,7 @@ template(name='alpha')
                         // .ui.compact.inline.basic.segment
                         // div
                         // .ui.small.inline.middle.aligned.header.middled #{title}
-                        .ui.small.inline.header #{title}
+                        // .ui.small.inline.header #{title}
                         // div
                         // .item #{scanner}
                         // .item id #{id}
@@ -57,7 +57,7 @@ template(name='alpha')
                         // .item subpods
                         // .ui.list
                         each subpods
-                            .ui.small.inline.header #{title}
+                            // .ui.small.inline.header #{title}
                             img.ui.pointer.image.inline.alphatemp(src=img.src)
                         // .item.alphatemp
                         // |#{plaintext}
