--- a/client/style.css
+++ b/client/style.css
@@ -2,12 +2,12 @@
 /*    border-radius: 5px;*/
 /*}*/
 
-/*.black_text {*/
-/*    color: black !important;*/
-/*}*/
-/*.label {*/
-/*    margin: 1px !important;*/
-/*}*/
+.black_text {
+    color: black !important;
+}
+.label {
+    margin: 1px !important;
+}
 
 /*.zoom_cursor {*/
 /*  cursor: zoom-in !important*/
