--- a/client/nav.jade
+++ b/client/nav.jade
@@ -17,13 +17,13 @@ template(name='nav')
         //         .item 111
         // a.icon.item.blink.clear(href="/love" class="{{isActiveRoute 'love'}}")
         //     i.heart.outline.large.icon
-        a.icon.item.blink.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
+        a.icon.item.mobile.hidden.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
             i.search.large.icon
-        a.icon.item.blink.clear(href="/subs" class="{{isActiveRoute 'subs'}}")
+        a.icon.item.mobile.hidden.clear(href="/subs" class="{{isActiveRoute 'subs'}}")
             i.fire.large.icon
-        a.icon.item.blink.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
+        a.icon.item.mobile.hidden.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
             i.stack.exchange.large.icon
-        a.icon.item.blink.clear(href="/map" class="{{isActiveRoute 'map'}}")
+        a.icon.item.mobile.hidden.clear(href="/map" class="{{isActiveRoute 'map'}}")
             i.marker.large.icon
         // a.icon.item.blink.clear.go_shop.mobile.hidden(href="/shop" class="{{isActiveRoute 'shop'}}")
         //     i.line.shop.large.icon
@@ -46,40 +46,40 @@ template(name='nav')
         // if is_dev 
         //     .icon.item
         //         i.code.icon
-        // .right.menu
-        if currentUser
-            // a.icon.item.add_post
-            //     i.plus.icon
-        
-            // if unread_count
-            //     a.item.alerts.select_term(href="#" class=alert_toggle_class)
-            //         i.bell.icon
-            //         if unread_count
-            //             |#{unread_count}
-            // else
-            //     a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
-            //         i.outline.bell.icon
-            // // a.icon.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
-            // //     i.inbox.icon
-            // a.icon.item.mobile.hidden(href="/u/#{currentUser.username}/received" class="{{isActivePath 'user_received'}}" title="#{user.username} received")
-            //     strong #{currentUser.points}
-            a.item.mobile.hidden(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user'}}")
-                if currentUser.profile_image_id
-                    if is_admin
-                        i.shield.icon(title='admin mode on')
-                    else
-                        img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                else 
-                    i.user.icon
-                strong.mobile.hidden #{currentUser.username}
-            a.icon.item.toggle_rightbar.no_blink
-                i.bars.icon
-        else
-            a.icon.item(href="/register" title='login')
-                i.user.plus.large.icon
-            a.item(href="/login" title='login')
-                |login
-                i.sign.in.large.icon
+        .right.menu
+            if currentUser
+                // a.icon.item.add_post
+                //     i.plus.icon
+            
+                // if unread_count
+                //     a.item.alerts.select_term(href="#" class=alert_toggle_class)
+                //         i.bell.icon
+                //         if unread_count
+                //             |#{unread_count}
+                // else
+                //     a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
+                //         i.outline.bell.icon
+                // // a.icon.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
+                // //     i.inbox.icon
+                // a.icon.item.mobile.hidden(href="/u/#{currentUser.username}/received" class="{{isActivePath 'user_received'}}" title="#{user.username} received")
+                //     strong #{currentUser.points}
+                a.item.mobile.hidden(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user'}}")
+                    if currentUser.profile_image_id
+                        if is_admin
+                            i.shield.icon(title='admin mode on')
+                        else
+                            img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                    else 
+                        i.user.icon
+                    strong.mobile.hidden #{currentUser.username}
+                a.icon.item.toggle_rightbar.no_blink
+                    i.bars.icon
+            else
+                a.icon.item(href="/register" title='login')
+                    i.user.plus.large.icon
+                a.item(href="/login" title='login')
+                    |login
+                    i.sign.in.large.icon
 
 
 template(name='topbar')
