--- a/client/style.css
+++ b/client/style.css
@@ -36,10 +36,10 @@
 /*  padding-left:0px !important;*/
 /*  margin-left:0px !important;*/
 /*}*/
-/*.click_shortcut {*/
-/*  margin:15px !important;*/
-/*  transform: scale(1.2) !important;*/
-/*}*/
+.click_shortcut {
+  margin:15px !important;
+  transform: scale(1.2) !important;
+}
 /*.tag_select_class:hover {*/
 /*    animation: fadein 1s !important;*/
 /*    animation: fadeout .25s; */
@@ -738,22 +738,21 @@
 /*    padding: 2em;*/
     /*padding-left: 1em;*/
 /*}*/
-/*.scrolling{*/
-/*    max-height: 90vh !important;*/
+.scrolling{
+    max-height: 90vh !important;
     /*min-height: 50vh !important;*/
-    /* padding: 5px !important;
-    border-radius: 7px !important;
-    border-width: 1px !important;
-    border-color: grey !important;
-    border-style: solid !important; */
-/*    overflow-y:scroll;*/
-/*    overflow-x:hidden;*/
-    /*z-index:1001;*/
-    /*margin-top: 1em; */
-    /*padding-top: .5em; */
-    /*padding: 2em;*/
-    /*padding-left: 1em;*/
-/*}*/
+    /*border-radius: 7px !important;*/
+    /*border-width: 1px !important;*/
+    /*border-color: grey !important;*/
+    /*border-style: solid !important; */
+    overflow-y:scroll;
+    overflow-x:hidden;
+    z-index:1001;
+    margin-top: 1em; 
+    padding-top: .5em; 
+    padding: 2em;
+    padding-left: 1em;
+}
 /*.forty {*/
 /*    max-height:38vh !important;*/
 /*    min-height:38vh !important;*/
@@ -840,56 +839,56 @@
 
 
 
-/* Mobile */
-/*@media only screen and (max-width: 765px) {*/
-/*  .mobile.hidden,*/
-/*  .tablet.only,*/
-/*  .computer.only,*/
-/*  .large.monitor.only,*/
-/*  .widescreen.monitor.only {*/
-/*    display: none !important;*/
-/*  }*/
-/*}*/
-/* Tablet / iPad Portrait */
-/*@media only screen and (min-width: 768px) and (max-width: 991px) {*/
-/*  .mobile.only,*/
-/*  .tablet.hidden,*/
-/*  .computer.only,*/
-/*  .large.monitor.only,*/
-/*  .widescreen.monitor.only {*/
-/*    display: none !important;*/
-/*  }*/
-/*}*/
-/* Computer / Desktop / iPad Landscape */
-/*@media only screen and (min-width: 992px) and (max-width: 1199px) {*/
-/*  .mobile.only,*/
-/*  .tablet.only,*/
-/*  .computer.hidden,*/
-/*  .large.monitor.only,*/
-/*  .widescreen.monitor.only {*/
-/*    display: none !important;*/
-/*  }*/
-/*}*/
-/* Large Monitor */
-/*@media only screen and (min-width: 1200px) and (max-width: 1919px) {*/
-/*  .mobile.only,*/
-/*  .tablet.only,*/
-/*  .computer.only,*/
-/*  .large.monitor.hidden,*/
-/*  .widescreen.monitor.only {*/
-/*    display: none !important;*/
-/*  }*/
-/*}*/
-/* Widescreen Monitor */
-/*@media only screen and (min-width: 1920px) {*/
-/*  .mobile.only,*/
-/*  .tablet.only,*/
-/*  .computer.only,*/
-/*  .large.monitor.only,*/
-/*  .widescreen.monitor.hidden {*/
-/*    display: none !important;*/
-/*  }*/
-/*}*/
+ Mobile 
+@media only screen and (max-width: 765px) {
+  .mobile.hidden,
+  .tablet.only,
+  .computer.only,
+  .large.monitor.only,
+  .widescreen.monitor.only {
+    display: none !important;
+  }
+}
+ Tablet / iPad Portrait 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .mobile.only,
+  .tablet.hidden,
+  .computer.only,
+  .large.monitor.only,
+  .widescreen.monitor.only {
+    display: none !important;
+  }
+}
+ Computer / Desktop / iPad Landscape 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .mobile.only,
+  .tablet.only,
+  .computer.hidden,
+  .large.monitor.only,
+  .widescreen.monitor.only {
+    display: none !important;
+  }
+}
+ Large Monitor 
+@media only screen and (min-width: 1200px) and (max-width: 1919px) {
+  .mobile.only,
+  .tablet.only,
+  .computer.only,
+  .large.monitor.hidden,
+  .widescreen.monitor.only {
+    display: none !important;
+  }
+}
+ Widescreen Monitor 
+@media only screen and (min-width: 1920px) {
+  .mobile.only,
+  .tablet.only,
+  .computer.only,
+  .large.monitor.only,
+  .widescreen.monitor.hidden {
+    display: none !important;
+  }
+}
 
 
 
