--- a/parts/stack/client/stack.jade
+++ b/parts/stack/client/stack.jade
@@ -23,9 +23,9 @@ template(name='stack')
                     +skve k='sort_direction' v=1 i='chevron down'
             // .three.wide.column
             //     .ui.header stack docs
-            .sixteen.wide.column.scrollin
+            .sixteen.wide.column.scrolling
                 // .ui.three.column.stackable.center.aligned.grid
-                .ui.centered.cards
+                .ui.centered.three.stackable.cards
                     each site_docs
                         a.ui.card.goto_site(href='/s/#{api_site_parameter}')
                             .content
