--- a/parts/stack/client/q.jade
+++ b/parts/stack/client/q.jade
@@ -62,7 +62,7 @@ template(name='q')
                                 +watson_view
                                 +watson_full
                         // +comments
-                .three.wide.column.scrolling
+                .four.wide.column.scrolling
                     a.ui.fluid.circular.compact.tertiary.button.say(href="/s/#{current_q.site}") 
                         i.chevron.left.icon
                         if watson.metadata.image
