--- a/parts/stack/client/site.jade
+++ b/parts/stack/client/site.jade
@@ -74,7 +74,7 @@ template(name='sq')
                         each site_questions
                             +s_q_item
                             .ui.divider
-                .three.wide.column.scrolling
+                .four.wide.column.scrolling
                     +alpha
                     each site_emotions
                         // +stag_picker
