add a bunch of tag_selectors

--- a/client/search.jade
+++ b/client/search.jade
@@ -50,6 +50,36 @@ template(name='home')
                         +search_shortcut tag='daoism' icon='yin yang'
                         +search_shortcut tag='car' icon='car'
                         +search_shortcut tag='tarot' icon='moon'
+                        +search_shortcut tag='bacon' icon='bacon'
+                        +search_shortcut tag='swimming' icon='swimmer'
+                        +search_shortcut tag='spa' icon='spa'
+                        +search_shortcut tag='cookies' icon='cookie'
+                        +search_shortcut tag='spider' icon='spider'
+                        +search_shortcut tag='allergies' icon='allergies'
+                        +search_shortcut tag='giving' icon='hand holding heart'
+                        +search_shortcut tag='helping' icon='hands helping'
+                        +search_shortcut tag='prayer' icon='praying hands'
+                        +search_shortcut tag='love' icon='heart'
+                        +search_shortcut tag='cheers' icon='glass cheers'
+                        +search_shortcut tag='hot tub' icon='hot tub'
+                        +search_shortcut tag='smoothies' icon='blender'
+                        +search_shortcut tag='tv' icon='tv'
+                        +search_shortcut tag='lightning' icon='bolt'
+                        +search_shortcut tag='writing' icon='pen fancy'
+                        +search_shortcut tag='maintenance' icon='wrench'
+                        +search_shortcut tag='traffic' icon='traffic light'
+                        +search_shortcut tag='college' icon='university'
+                        +search_shortcut tag='teamwork' icon='handshake'
+                        +search_shortcut tag='puppy' icon='paw'
+                        +search_shortcut tag='tori' icon='torii gate'
+                        +search_shortcut tag='peace' icon='dove'
+                        +search_shortcut tag='brain' icon='brain'
+                        +search_shortcut tag='star trek' icon='hand spock'
+                        +search_shortcut tag='broken heart' icon='heart broken'
+                        +search_shortcut tag='hockey' icon='hockey puck'
+                        +search_shortcut tag='golf' icon='golf ball'
+                        +search_shortcut tag='vollyball' icon='vollyball ball'
+                        +search_shortcut tag='meteor' icon='meteor'
                             
                 if picked_tags
                     .ui.icon.input
