user dahboard remove subs, put nav to leftbar

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -48,21 +48,21 @@ template(name='nav')
         //         i.code.icon
         .right.menu
             if currentUser
-                // a.icon.item.add_post
-                //     i.plus.icon
+                a.icon.item.add_post
+                    i.plus.icon
             
-                // if unread_count
-                //     a.item.alerts.select_term(href="#" class=alert_toggle_class)
-                //         i.bell.icon
-                //         if unread_count
-                //             |#{unread_count}
-                // else
-                //     a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
-                //         i.outline.bell.icon
-                // // a.icon.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
-                // //     i.inbox.icon
-                // a.icon.item.mobile.hidden(href="/u/#{currentUser.username}/received" class="{{isActivePath 'user_received'}}" title="#{user.username} received")
-                //     strong #{currentUser.points}
+                if unread_count
+                    a.item.alerts.select_term(href="#" class=alert_toggle_class)
+                        i.bell.icon
+                        if unread_count
+                            |#{unread_count}
+                else
+                    a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
+                        i.outline.bell.icon
+                // a.icon.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
+                //     i.inbox.icon
+                a.icon.item.mobile.hidden(href="/u/#{currentUser.username}/received" class="{{isActivePath 'user_received'}}" title="#{user.username} received")
+                    strong #{currentUser.points}
                 a.item.mobile.hidden(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user'}}")
                     if currentUser.profile_image_id
                         if is_admin
@@ -75,11 +75,12 @@ template(name='nav')
                 a.icon.item.toggle_rightbar.no_blink
                     i.bars.icon
             else
-                a.icon.item(href="/register" title='login')
+                a.item(href="/register" title='login')
+                    |register
                     i.user.plus.large.icon
                 a.item(href="/login" title='login')
                     |login
-                    i.sign.in.large.icon
+                    i.sign.in.icon
 
 
 template(name='topbar')
