--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,6 +1,6 @@
 template(name='nav')
     .ui.fluid.attached.borderless.inverted.large.menu.hscroll
-        a.icon.item.toggle_sidebar.no_blink
+        a.icon.item.toggle_sidebar
             i.bars.icon
     
         a.icon.item.blink.clear(href="/" class="{{isActiveRoute regex='home'}}")
@@ -72,7 +72,7 @@ template(name='nav')
                     else 
                         i.user.icon
                     strong.mobile.hidden #{currentUser.username}
-                a.icon.item.toggle_rightbar.no_blink
+                a.icon.item.toggle_rightbar
                     i.bars.icon
             else
                 a.item(href="/register" title='login')
@@ -107,39 +107,39 @@ template(name='recent_alert')
             
 template(name='rightbar')
     .ui.right.sidebar.vertical.borderless.inverted.menu
-        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
             | dashboard (#{currentUser.points}p)
             i.dashboard.icon
         
-        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/credits" class="{{isActiveRoute 'user_credits'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/credits" class="{{isActiveRoute 'user_credits'}}")
             | #{currentUser.total_credit_amount}p received
             i.chevron.down.icon
-        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/posts" class="{{isActiveRoute 'user_posts'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/posts" class="{{isActiveRoute 'user_posts'}}")
             | #{currentUser.total_credit_amount} posts
             i.newspaper.icon
-        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/comments" class="{{isActiveRoute 'user_comments'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/comments" class="{{isActiveRoute 'user_comments'}}")
             | #{currentUser.total_credit_amount} comments
             i.comment.icon
-        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/tips" class="{{isActiveRoute 'user_tips'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/tips" class="{{isActiveRoute 'user_tips'}}")
             | #{_amount} tips
             i.donate.icon
-        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/groups" class="{{isActiveRoute 'user_groups'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/groups" class="{{isActiveRoute 'user_groups'}}")
             | groups
             i.fire.icon
-        a.ui.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/bounties" class="{{isActiveRoute 'user_bounties'}}" title="#{user.username} bounties")
+        a.ui.item.toggle_rightbar(href="/u/#{currentUser.username}/bounties" class="{{isActiveRoute 'user_bounties'}}" title="#{user.username} bounties")
             i.hand.holding.icon
             span bounties
-        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/friends" class="{{isActiveRoute 'user_friends'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/friends" class="{{isActiveRoute 'user_friends'}}")
             | friends
             i.users.icon
-        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/sent" class="{{isActiveRoute 'user_sent'}}")
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/sent" class="{{isActiveRoute 'user_sent'}}")
             | #{currentUser.total_debit_amount}p sent
             i.chevron.up.icon
         .ui.divider
-        a.item.toggle_rightbar.no_blink(href="/u/#{currentUser.username}/edit" title='edit your account')
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/edit" title='edit your account')
             i.cog.icon
             |settings
-        // a.item.toggle_nightmode.toggle_rightbar.no_blink(href="#")
+        // a.item.toggle_nightmode.toggle_rightbar(href="#")
         //     i.lightbulb.icon
         //     |dark mode
         a.item.logout
@@ -154,17 +154,17 @@ template(name='rightbar')
 
 template(name='leftbar')
     .ui.left.sidebar.vertical.borderless.inverted.menu
-        // a.item.toggle_sidebar.no_blink(href="/" class="{{isActiveRoute '/'}}")
+        // a.item.toggle_sidebar(href="/" class="{{isActiveRoute '/'}}")
         //     img.ui.avatar.compact.image(src="{{c.url 'one_logo' height=200 width=200 gravity='face' crop='fill'}}")
         //     |One
-        // a.item.set_member.toggle_sidebar.no_blink(href="/m/member" class="{{isActivePath 'm/member'}}" title='players')
-        a.item.toggle_sidebar.no_blink(href="/users" class="{{isActivePath 'users'}}" title='users')
+        // a.item.set_member.toggle_sidebar(href="/m/member" class="{{isActivePath 'm/member'}}" title='players')
+        a.item.toggle_sidebar(href="/users" class="{{isActivePath 'users'}}" title='users')
             i.users.icon
             | users
-        a.item.toggle_sidebar.no_blink(href="/events" class="{{isActivePath '/events'}}")
+        a.item.toggle_sidebar(href="/events" class="{{isActivePath '/events'}}")
             i.calendar.icon
             |events
-        a.item.toggle_sidebar.no_blink(href="/m/request" class="{{isActivePath '/m/request'}}")
+        a.item.toggle_sidebar(href="/m/request" class="{{isActivePath '/m/request'}}")
             i.concierge.bell.icon
             |requests
         a.icon.item.blink.clear.mobile.hidden.toggle_sidebar(href="/stats" class="{{isActiveRoute 'stats'}}")
